--- a/index.html
+++ b/index.html
@@ -54,8 +54,21 @@
 
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="button">Заказать услугу</button>
+        <button type="button" class="button" data-modal-open>
+          Заказать услугу
+        </button>
       </section>
+
+      <!-- modal window -->
+      <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+          <button type="button" class="modal-close-btn" data-modal-close>
+            <svg class="icon-btn">
+              <use href="./images/icons.svg#icon-close-window"></use></svg
+            ><span class="visually-hidden">закрыть окно</span>
+          </button>
+        </div>
+      </div>
 
       <!-- features -->
       <section class="section">
@@ -543,5 +556,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
