--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work-title">Десктопные приложения</h3>
             </li>
             <li class="work-item">
               <img
@@ -125,6 +126,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work-title">Мобильные приложения</h3>
             </li>
             <li class="work-item">
               <img
@@ -133,6 +135,7 @@
                 width="370"
                 height="294"
               />
+              <h3 class="work-title">Дизайнерские решения</h3>
             </li>
           </ul>
         </div>
