--- a/portfolio.html
+++ b/portfolio.html
@@ -74,12 +74,19 @@
           <ul class="examples list">
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/tehnokryak.jpg"
-                  alt="Страница сайта Технокряк"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/tehnokryak.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Технокряк</h2>
                   <p class="examples-desc">Веб-сайт</p>
