--- a/portfolio.html
+++ b/portfolio.html
@@ -95,12 +95,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/new_orlean.jpg"
-                  alt="Рекламный банер"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/new_orlean.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">
                     Постер New Orlean vs Golden Star
@@ -111,12 +118,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/sea_food.jpg"
-                  alt="Логотип ресторана"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/sea_food.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Ресторан Seafood</h2>
                   <p class="examples-desc">Приложение</p>
@@ -125,12 +139,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/progect_prime.jpg"
-                  alt="Наушники"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/progect_prime.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект Prime</h2>
                   <p class="examples-desc">Маркетинг</p>
@@ -139,12 +160,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/progect_boxes.jpg"
-                  alt="Коробки"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/progect_boxes.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект Boxes</h2>
                   <p class="examples-desc">Приложение</p>
@@ -153,12 +181,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/inspiration.jpg"
-                  alt="Старница сайта"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/inspiration.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Inspiration has no Borders</h2>
                   <p class="examples-desc">Веб-сайт</p>
@@ -167,12 +202,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/edition.jpg"
-                  alt="Страницы журнала"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/edition.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Издание Limited Edition</h2>
                   <p class="examples-desc">Дизайн</p>
@@ -181,12 +223,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/progect_lab.jpg"
-                  alt="Логотип проэкта"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/progect_lab.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект LAB</h2>
                   <p class="examples-desc">Маркетинг</p>
@@ -195,12 +244,19 @@
             </li>
             <li class="examples-card">
               <a href="" class="examples-link"
-                ><img
-                  src="./images/growing_business.jpg"
-                  alt="Страница сайта на ноутбуке"
-                  width="370px"
-                  height="294px"
-                />
+                ><div class="examples-thumb">
+                  <img
+                    src="./images/growing_business.jpg"
+                    alt="Страница сайта Технокряк"
+                    width="370px"
+                    height="294px"
+                  />
+                  <p class="exemples-text">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
                 <div class="card-box">
                   <h2 class="examples-title">Growing Business</h2>
                   <p class="examples-desc">Приложение</p>
