--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,14 @@
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Технокряк</h2>
@@ -98,15 +101,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/new_orlean.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Рекламный банер"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">
@@ -121,15 +127,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/sea_food.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Логотип ресторана"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Ресторан Seafood</h2>
@@ -142,15 +151,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/progect_prime.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Наушники"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект Prime</h2>
@@ -163,15 +175,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/progect_boxes.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Коробки"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект Boxes</h2>
@@ -184,15 +199,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/inspiration.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Старница сайта"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Inspiration has no Borders</h2>
@@ -205,15 +223,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/edition.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Страницы журнала"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Издание Limited Edition</h2>
@@ -226,15 +247,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/progect_lab.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Логотип проэкта"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект LAB</h2>
@@ -247,15 +271,18 @@
                 ><div class="examples-thumb">
                   <img
                     src="./images/growing_business.jpg"
-                    alt="Страница сайта Технокряк"
+                    alt="Страница сайта на ноутбуке"
                     width="370px"
                     height="294px"
                   />
-                  <p class="exemples-text">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
+                  <div class="examples-overlay">
+                    <p class="exemples-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Growing Business</h2>
