Добавляет изменения в модальное окно

--- a/index.html
+++ b/index.html
@@ -59,17 +59,6 @@
         </button>
       </section>
 
-      <!-- modal window -->
-      <div class="backdrop is-hidden" data-modal>
-        <div class="modal">
-          <button type="button" class="modal-close-btn" data-modal-close>
-            <svg class="icon-btn">
-              <use href="./images/icons.svg#icon-close-window"></use></svg
-            ><span class="visually-hidden">закрыть окно</span>
-          </button>
-        </div>
-      </div>
-
       <!-- features -->
       <section class="section">
         <div class="container">
@@ -559,6 +548,18 @@
         </div>
       </div>
     </footer>
+
+    <!-- backdrop -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="icon-btn">
+            <use href="./images/icons.svg#icon-close-window"></use></svg
+          ><span class="visually-hidden">закрыть окно</span>
+        </button>
+      </div>
+    </div>
+
     <script src="./js/modal.js"></script>
   </body>
 </html>
