Добавляет изменения оверлей

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,14 +81,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Технокряк</h2>
@@ -105,14 +103,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">
@@ -131,15 +127,14 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
+
                 <div class="card-box">
                   <h2 class="examples-title">Ресторан Seafood</h2>
                   <p class="examples-desc">Приложение</p>
@@ -155,14 +150,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект Prime</h2>
@@ -179,14 +172,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект Boxes</h2>
@@ -203,14 +194,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Inspiration has no Borders</h2>
@@ -227,14 +216,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Издание Limited Edition</h2>
@@ -251,14 +238,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Проект LAB</h2>
@@ -275,14 +260,12 @@
                     width="370px"
                     height="294px"
                   />
-                  <div class="examples-overlay">
-                    <p class="exemples-text">
-                      Технокряк это современная площадка распространения
-                      коронавируса. Компании используют эту платформу для
-                      цифрового шпионажа и атак на защищённые сервера
-                      конкурентов.
-                    </p>
-                  </div>
+
+                  <p class="examples-overlay">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
                 </div>
                 <div class="card-box">
                   <h2 class="examples-title">Growing Business</h2>
